--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Template - TEMA</title>
+      <title>Template - Strings</title>
       <script src="script.js"></script>
    </head>
 
